Fixed logo not being centered on mobile.

--- a/assets/css/snap/bottom.styl
+++ b/assets/css/snap/bottom.styl
@@ -26,15 +26,6 @@
   #brand-image-wide
     width 104px !important
 
-@media (max-width: 480px)
-  .mobile-install-dialog
-    .title
-      // Undo the padding.
-      margin-left -(15px + 20px) // Extra 20px is to cut off the F.
-      margin-right -15px
-      // Stay in upper left corner.
-      text-align left
-
 @media (max-height: 380px)
   .mobile-install-dialog
     .title
